NLME/1/GEN240923112253.83/Shared/compilelog.txt
WORKING_DIR=D:/git/ADPOBenchmark/NLME/1/GEN240923112253.83/Shared, MPIFLAG=MPINO, LOCAL_HOST=NO, NUM_NODES=1, SHARED_DRIVE=
model=test.mdl, nlmeDir=D:/NLME_Engine_ADPO
---------------------
> md .\Work
---------------------
Translating...
---------------------
> "D:/NLME_Engine_ADPO\TDL5.exe" /hash 1770978959 /L .\test.mdl .\Work 1> log.txt 2>&1
---------------------
Compiling...
---------------------
> "C:/PHSTMinGW64/\bin\gcc.exe" -std=c++11 -m64 -I"D:/NLME_Engine_ADPO" -malign-double -fverbose-asm -c -g .\Work\Model.cpp
---------------------
.\Work\Model.cpp:433:6: error: conflicting declaration of C function 'void GetCovariateName(int*, char*)'
 void GetCovariateName(int* _pi, char* _nm){
      ^~~~~~~~~~~~~~~~
In file included from D:/NLME_Engine_ADPO/ModelAPI.h:15,
                 from .\Work\Model.cpp:18:
D:/NLME_Engine_ADPO/ModelAPI/covariate.h:5:14: note: previous declaration 'const char* GetCovariateName(int)'
 const char * GetCovariateName(int i);
              ^~~~~~~~~~~~~~~~
.\Work\Model.cpp:443:6: error: conflicting declaration of C function 'void GetCovariateDirection(int*, int*)'
 void GetCovariateDirection(int* _pi, int* _dir){
      ^~~~~~~~~~~~~~~~~~~~~
In file included from D:/NLME_Engine_ADPO/ModelAPI.h:15,
                 from .\Work\Model.cpp:18:
D:/NLME_Engine_ADPO/ModelAPI/covariate.h:6:5: note: previous declaration 'int GetCovariateDirection(int)'
 int GetCovariateDirection(int i);
     ^~~~~~~~~~~~~~~~~~~~~
.\Work\Model.cpp: In function 'void Advance(int, int, double*, double, int, double*)':
.\Work\Model.cpp:1387:26: error: invalid conversion from 'int' to 'double*' [-fpermissive]
  ODESolve(bGenGradients, iODELevel, pTimeOuter, _dt, bTimeAdvances, zzY);
                          ^~~~~~~~~
.\Work\Model.cpp:1387:37: error: cannot convert 'double*' to 'double'
  ODESolve(bGenGradients, iODELevel, pTimeOuter, _dt, bTimeAdvances, zzY);
                                     ^~~~~~~~~~
In file included from D:/NLME_Engine_ADPO/MUtil.h:6,
                 from .\Work\Model.cpp:17:
D:/NLME_Engine_ADPO/mutil/ODE.h:22:57: note:   initializing argument 3 of 'void ODESolve(int, double*, double, int, double*)'
 void ODESolve(int iODELevel, double *pTimeOuter, double _dt, int bTimeAdvances, double zzY[]);
                                                  ~~~~~~~^~~
! --------------------------------------
!   ERROR compiling Model.cpp
! --------------------------------------
exit 1
